--- a/index.html
+++ b/index.html
@@ -6,6 +6,21 @@
     <title>MindFlex</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
+      // Parche Robusto para process.env en el navegador
+      (function() {
+        if (typeof window.process === 'undefined') {
+          window.process = { env: {} };
+        } else if (typeof window.process.env === 'undefined') {
+          window.process.env = {};
+        }
+      })();
+
+      // Captura de errores temprana para depuración en producción
+      window.onerror = function(msg, url, lineNo, columnNo, error) {
+        console.error('Error Crítico detectado:', msg, '\nEn:', url, 'línea:', lineNo);
+        return false;
+      };
+
       tailwind.config = {
         theme: {
           extend: {
@@ -19,10 +34,20 @@
       }
     </script>
     <style>
-      /* Disable pull-to-refresh on mobile */
       body {
         overscroll-behavior-y: none;
         -webkit-tap-highlight-color: transparent;
+        background-color: #f8fafc;
+      }
+      .fade-enter { opacity: 0; }
+      .fade-enter-active { opacity: 1; transition: opacity 200ms ease-in; }
+      /* Prevenir que el contenido se vea antes de cargar React */
+      #root:empty {
+        display: flex;
+        align-items: center;
+        justify-center: center;
+        height: 100vh;
+        background: white;
       }
     </style>
   <script type="importmap">
@@ -31,6 +56,7 @@
     "@google/genai": "https://esm.sh/@google/genai@^1.35.0",
     "react": "https://esm.sh/react@^19.2.3",
     "react/": "https://esm.sh/react@^19.2.3/",
+    "react-dom": "https://esm.sh/react-dom@^19.2.3",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
     "zustand": "https://esm.sh/zustand@^5.0.10"
@@ -39,6 +65,13 @@
 </script>
 </head>
   <body class="bg-surface text-slate-800 antialiased h-screen overflow-hidden flex flex-col">
-    <div id="root" class="flex-1 flex flex-col h-full overflow-hidden"></div>
+    <div id="root" class="flex-1 flex flex-col h-full overflow-hidden">
+      <!-- Loader simple mientras carga el JS -->
+      <div style="display:flex; flex-direction:column; align-items:center; justify-content:center; height:100%; font-family: sans-serif; color: #4f46e5;">
+        <div style="width: 40px; height: 40px; border: 4px solid #e2e8f0; border-top: 4px solid #4f46e5; border-radius: 50%; animation: spin 1s linear infinite;"></div>
+        <p style="margin-top: 20px; font-weight: bold;">Cargando MindFlex...</p>
+      </div>
+      <style>@keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }</style>
+    </div>
   </body>
 </html>
