--- a/index.html
+++ b/index.html
@@ -13,21 +13,32 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
+        darkMode: 'class',
         theme: {
           extend: {
             colors: {
               primary: '#4f46e5',
               secondary: '#0ea5e9',
               surface: '#f8fafc',
+              darkSurface: '#000000',
+              darkElevated: '#0a0a0a',
             }
           }
         }
       }
     </script>
     <style>
-      body { overscroll-behavior-y: none; -webkit-tap-highlight-color: transparent; background-color: #f8fafc; }
+      body { overscroll-behavior-y: none; -webkit-tap-highlight-color: transparent; background-color: #f8fafc; transition: background-color 0.3s ease; }
+      .dark body { background-color: #000000; }
       #root:empty { display: flex; align-items: center; justify-content: center; height: 100vh; background: white; }
+      .dark #root:empty { background: #000000; }
       @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
+      .perspective-1000 { perspective: 1000px; }
+      .backface-hidden { backface-visibility: hidden; }
+      .transform-style-3d { transform-style: preserve-3d; }
+      .rotate-y-180 { transform: rotateY(180deg); }
+      .hide-scrollbar::-webkit-scrollbar { display: none; }
+      .hide-scrollbar { -ms-overflow-style: none; scrollbar-width: none; }
     </style>
     
     <script type="importmap">
@@ -45,14 +56,13 @@
 }
 </script>
   </head>
-  <body class="bg-surface text-slate-800 antialiased h-screen overflow-hidden flex flex-col">
+  <body class="bg-surface text-slate-800 dark:bg-black dark:text-slate-100 antialiased h-screen overflow-hidden flex flex-col">
     <div id="root" class="flex-1 flex flex-col h-full overflow-hidden">
       <div id="app-loader" style="display:flex; flex-direction:column; align-items:center; justify-content:center; height:100%; font-family: sans-serif; color: #4f46e5; background: white;">
         <div style="width: 40px; height: 40px; border: 4px solid #f1f5f9; border-top: 4px solid #4f46e5; border-radius: 50%; animation: spin 1s linear infinite;"></div>
         <p style="margin-top: 20px; font-weight: bold;">Cargando MindFlex...</p>
       </div>
     </div>
-    <!-- Carga explícita del punto de entrada para producción -->
     <script type="module" src="./index.tsx"></script>
   </body>
 </html>
